syntax = "proto3";

package pb_dict;
option go_package = "pb.dict";

enum CMD {
  NONE=0;

  // Test
  pb_test_C2S_ResetGameState=100;
  pb_test_S2C_ResetGameState=200;

  // Game Common
  pb_game_C2S_EstablishPlayer=1000;
  pb_game_C2S_GameState=1001;
  pb_game_C2S_Ping=1002;
  pb_game_S2C_EstablishPlayer=1100;
  pb_game_S2C_GameState=1101;
  pb_game_S2C_Ping=1102;

  pb_game_S2C_ServerMessage=1050;

  // Round
  pb_round_C2S_DiscardCards=2000;
  pb_round_S2C_RoundStart=2100;
  pb_round_S2C_DiscardPhaseEnded=2101;
  pb_round_S2C_DiscardCards=2102;
  pb_round_S2C_EndGame=2103;

  // Battle
  pb_battle_C2S_Produce=3000;
  pb_battle_C2S_MoveTroops=3001;
  pb_battle_C2S_Attack=3002;
  pb_battle_C2S_ToggleTankGuardMode=3003;
  pb_battle_C2S_ProduceBuilding=3004;
  pb_battle_C2S_PlaneLoad=3005;
  pb_battle_C2S_PlaneUnload=3006;

  pb_battle_S2C_Produce=3100;
  pb_battle_S2C_MoveComplete=3101;
  pb_battle_S2C_Attack=3102;
  pb_battle_S2C_ToggleTankGuardMode=3103;
  pb_battle_S2C_MergeTroops=3104;
  pb_battle_S2C_MoveTroopsPlanningPath=3105;
  pb_battle_S2C_CrossLargeTile=3106;
  pb_battle_S2C_LargeTileChange=3107;
  pb_battle_S2C_ProduceBuilding=3108;
  pb_battle_S2C_PlaneLoad=3109;
  pb_battle_S2C_PlaneUnload=3110;

  // Test
  pb_test_C2S_Test=9000;
}